samples/_failures_safe/1761176993_7732a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb0ee062.c: In function ‘main’:
./samples/SAFE/__tmp_cb0ee062.c:153:21: error: expected declaration or statement at end of input
  153 |                     print_matrix(&result, "A + B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_cb0ee062.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb0ee062.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cb0ee062.c:153:21: error: expected declaration or statement at end of input
